# cornucopia

./: README.md
benches/: Cargo.toml  codegen.rs
benches/execution/: diesel_benches.rs
benches/execution/cornucopia_benches/: generated.rs
crates/client_async/: Cargo.toml
crates/client_async/src/: deadpool.rs  generic_client.rs
crates/client_core/src/: domain.rs  type_traits.rs
crates/cornucopia/: Cargo.toml
crates/cornucopia/src/: cli.rs  codegen.rs  lib.rs  parser.rs  prepare_queries.rs  type_registrar.rs
examples/auto_build/: Cargo.toml  _build.rs
examples/auto_build/src/: cornucopia.rs  main.rs
examples/basic_async/: Cargo.toml
examples/basic_async/src/: cornucopia.rs  main.rs
examples/basic_sync/: Cargo.toml
examples/basic_sync/src/: main.rs
test_codegen/: Cargo.toml
test_codegen/src/: cornucopia.rs  main.rs
test_integration/: Cargo.toml
test_integration/fixtures/codegen/: benchmarks.toml  test_codegen.toml
test_integration/src/: codegen.rs  fixtures.rs  utils.rs
