[package]
name = "auto-build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Cornucopia async client
## If you're trying this example as a standalone crate,
## replace the path with the latest current version
cornucopia_async = { path = "../../crates/client_async" }

# Async
tokio = { version = "1.24.2", features = ["full"] }
futures-util = "0.3.25"

# Postgres interaction
tokio-postgres = "0.7.7"
postgres-types = "0.2.4"
## Connection pooling
deadpool-postgres = "0.12.1"

## String enum conversion
strum = { version = "0.26", features = ["derive"] }

## Number enum conversion
num-traits = { version = "0.2", default-features = false }
num-derive = { version = "0.4", default-features = false }

[build-dependencies]
# Cornucopia library to automatically
## If you're trying this example as a standalone crate,
## replace the path with the latest current version
cornucopia = { path = "../../crates/cornucopia" }
